添加测试例子

--- a/src/view/TestDome/VirtualList/index.less
+++ b/src/view/TestDome/VirtualList/index.less
@@ -71,4 +71,13 @@
         align-items: center;
         height: 80%;
     }
+    .image-loading{
+        animation: loadingCircle 2s infinite linear;
+    }
+}
+
+@keyframes loadingCircle {
+    to {
+        transform: rotate(360deg)
+    }
 }
