--- a/src/view/TestDome/Common/Tabs/index.less
+++ b/src/view/TestDome/Common/Tabs/index.less
@@ -19,7 +19,7 @@
         margin-bottom: 0;
     }
 
-    .ant-tabs-content{
+    .ant-tabs-content,.ant-tabs-tabpane{
         height: 100%;
     }
     .custom-tabs-children{
